--- a/books/violent_python/ch01_Introduction.ipynb
+++ b/books/violent_python/ch01_Introduction.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:1cd35d57421ba75018b446d68581baca1c2f3abccc8579245b06ee80b2e29af5"
+  "signature": "sha256:0349d59b6edc9fbd201175adb318d991667777c8b8136d4886708f71565a4390"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -20,7 +20,7 @@
       "\n",
       "## [\ud574\ucee4\uc758 \uc5b8\uc5b4, \uce58\uba85\uc801 \ud30c\uc774\uc36c](http://www.yes24.com/24/goods/8433461)\n",
       "\n",
-      "<img src=\"http://image.yes24.com/goods/8433461/L\" width=\"200px\" />"
+      "<img src=\"files/images/violent_python.jpeg\" width=\"200px\" />"
      ]
     },
     {
