Modify ugly code to beautiful code.

--- a/books/violent_python/ch01_Introduction.ipynb
+++ b/books/violent_python/ch01_Introduction.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:0349d59b6edc9fbd201175adb318d991667777c8b8136d4886708f71565a4390"
+  "signature": "sha256:44a1d73c9943e171c22729326c1642b61c81cfccabb42c46135db73fa1484077"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -20,7 +20,7 @@
       "\n",
       "## [\ud574\ucee4\uc758 \uc5b8\uc5b4, \uce58\uba85\uc801 \ud30c\uc774\uc36c](http://www.yes24.com/24/goods/8433461)\n",
       "\n",
-      "<img src=\"files/images/violent_python.jpeg\" width=\"200px\" />"
+      "<img src=\"files/images/violent_python.jpeg\" width=\"200px\" />\n"
      ]
     },
     {
