Modify a little and upload feedback

--- a/books/violent_python/ch01_Introduction.ipynb
+++ b/books/violent_python/ch01_Introduction.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:44a1d73c9943e171c22729326c1642b61c81cfccabb42c46135db73fa1484077"
+  "signature": "sha256:ab9145412cc1d954b44b5802638f6fa3a50a8f2185f37d2e412214855f27824b"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -107,7 +107,7 @@
       "- \uce68\ud22c \ud14c\uc2a4\ud2b8\ub294 \uc2dc\uac04\uacfc\uc758 \uc2f8\uc6c0\n",
       "- \ud30c\uc774\uc36c \ub77c\uc774\ube0c\ub7ec\ub9ac\ub97c \uc0ac\uc6a9\ud558\uba74 \uc9e7\uc740 \ucf54\ub4dc\ub85c \uadf8\ub9ac\uace0 \ube60\ub978 \uc2dc\uac04 \ub0b4\uc5d0 \uc6d0\ud558\ub294 \ubaa9\uc801 \ub2ec\uc131\n",
       "- \ud30c\uc774\uc36c\uc740 \uc27d\ub2e4.\n",
-      "- C\uac00\uc740 \uc5b8\uc5b4\ub294 \ud3ec\uc778\ud130\uc640 \uba54\ubaa8\ub9ac \ud560\ub2f9 \uac19\uc740 \ubd80\ubd84\uc744 \uc9c1\uc811 \ud504\ub85c\uadf8\ub798\ubc0d\ud574\uc57c \ud568\n",
+      "- C\uac19\uc740\uc740 \uc5b8\uc5b4\ub294 \ud3ec\uc778\ud130\uc640 \uba54\ubaa8\ub9ac \ud560\ub2f9 \uac19\uc740 \ubd80\ubd84\uc744 \uc9c1\uc811 \ud504\ub85c\uadf8\ub798\ubc0d\ud574\uc57c \ud568\n",
       "- \ud30c\uc774\uc36c\uc740 \uc2a4\ud06c\ub9bd\ud2b8 \uc5b8\uc5b4\uc774\uba74\uc11c \ucef4\ud30c\uc77c\uc744 \ud560 \uc218 \uc788\ub2e4\ub294 \uac83\n",
       "- \uc9c4\uc815\ud55c \uc758\ubbf8\uc758 \ucef4\ud30c\uc77c\uc740 \uc544\ub2c8\uc9c0\ub9cc, \ucef4\ud30c\uc77c\uacfc \ub3d9\uc77c\ud55c \ud6a8\uacfc\ub97c \uc5bb\uc744 \uc218 \uc788\uc5b4 \ud30c\uc774\uc36c\uc774 \uc124\uce58\ub418\uc9c0 \uc54a\uc740 \uacf5\uaca9 \ub300\uc0c1\uc5d0\uc11c\ub3c4 \ud30c\uc774\uc36c \ucf54\ub4e4\ub974 \uc2e4\ud589\ud560 \uc218 \uc788\ub2e4\n",
       "\n",
