--- a/books/violent_python/ch02_Penetration_test.ipynb
+++ b/books/violent_python/ch02_Penetration_test.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:315cb7e19c7af5ba2a2b2841b6fe2834d5c2614b94133283bef4daf2d510412b"
+  "signature": "sha256:80c1194aff970fb368b69030d117609a2a4c88c81a25fec2248a96d847263848"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -847,6 +847,29 @@
       "#### Using nmap in Matrix\n",
       "\n",
       "<img src=\"files/images/trinity_nmapscreen.jpg\" />"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "### [Matrix Sequel Has Hacker Cred](http://www.securityfocus.com/news/4831)\n",
+      "\n",
+      "Probably the most widely-used freeware hacking tool, the real-life Nmap is a sophisticated port scanner that sends packets to a machine -- or a network of machines -- in an attempt to determine what services are running. An Nmap port scan is a common prelude to an intrusion attempt -- a way of casing the joint, to find out if any vulnerable service are running.\n",
+      "\n",
+      "That's exactly how the fictional Trinity uses it. In a sequence that flashes on screen for a few scant seconds, the green phosphor text of Trinity's computer clearly shows Nmap being run against the IP address 10.2.2.2, and finding an open port number 22, correctly identified as the SSH service used to log into computers remotely.\n",
+      "\n",
+      "\"I was definitely pretty excited when I saw it,\" says \"Fyodor,\" the 25-year-old author of Nmap. \"I think compared to previous movies that had any kind of hacking content, you could generally assume it's going to be some kind of stupid 3D graphics show.\"\n",
+      "\n",
+      "But the unexpected nod to hackerdom doesn't end there. Responding to the Nmap output , Trinity summons a program called **\"sshnuke\" which begins \"[a]ttempting to exploit SSHv1 CRC32.\"**\n",
+      "\n",
+      "Discovered in February, 2001 by security analyst Michal Zalewski, the SSH CRC-32 bug is a very real buffer overflow in a chunk of code designed to guard against cryptographic attacks on SSH version one. Properly exploited, **it grants full remote access to the vulnerable machine.**\n",
+      "\n",
+      "\"I think there are at least two public exploits in circulation right now,\" said Zalewski, in a telephone interview. \"They just got released about a month after the advisory. And I know there are some that are not public.\"\n",
+      "\n",
+      "The actual program Trinity uses is fictitious -- there is no \"sshnuke,\" yet, and genuine exploits sensibly drop the user directly into a root shell, while the big screen version forces the hacker to change the system's root password -- in this case to \"Z1ON0101.\" (Note the numeral in the place of the 'I' -- more hax0r style.)\n",
+      "\n",
+      "But then, the film does take place in the future. Is Zalewski surprised to see unpatched SSH servers running in the year **AD 2199?** **\"It's not that uncommon for people to run the old distribution,\"** he says. **\"I know we had a bunch of boxes that were unpatched for two years.\"**"
      ]
     },
     {
